--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/config/axios.ts"],
 	"exclude": ["node_modules, server"]
 }
